--- a/2nd page.html
+++ b/2nd page.html
@@ -5,8 +5,8 @@
 
 </p>5150+808 drive solo and rhythm<p/>
 
-<a href="/images/myw3schoolsimage." Download file>
-  <img src="//5150_808.am2Data" alt="Download file" width="104" height="142">
+<a href="/5150_808.am2Data." Download file>
+  <img src="/5150_808.am2Data" alt="Download file" width="104" height="142">
 </a>
 
 <div class="column">
