--- a/2nd page.html
+++ b/2nd page.html
@@ -5,7 +5,7 @@
 
 </p>5150+808 drive solo and rhythm<p/>
 
-<a href="/https://jepman777.github.io/am2Data/5150_808.am2data Download file>
+<a href="https://jepman777.github.io/am2Data/5150_808.am2data Download file>
   <img src="/5150_808.am2Data" alt="Download file" width="104" height="142">
 </a>
 
