--- a/2nd page.html
+++ b/2nd page.html
@@ -5,8 +5,8 @@
 
 </p>5150+808 drive solo and rhythm<p/>
 
-<a href="/https://jepman777.github.io/am2Data/5150_808.am2data Download file>
-  <img src="/https://jepman777.github.io/am2Data/5150_808.am2data alt="Download file" width="104" height="142">
+<a href="/images/myw3schoolsimage.jpg"https://github.com/jepman777/am2Data.git ="w3logo">
+  <img src="/images/myw3schoolsimage.jpg" alt="W3Schools" width="104" height="142">
 </a>
 
 <div class="column">
