--- a/2nd page.html
+++ b/2nd page.html
@@ -5,7 +5,7 @@
 
 </p>5150+808 drive solo and rhythm<p/>
 
-<a href="/images/myw3schoolsimage.jpg"https://github.com/jepman777/am2Data.git ="w3logo">
+<a href="/images/myw3schoolsimage.jpg"DOWNLOAD ="w3logo">
   <img src="/images/myw3schoolsimage.jpg" alt="W3Schools" width="104" height="142">
 </a>
 
