--- a/2nd page.html
+++ b/2nd page.html
@@ -6,7 +6,7 @@
 </p>5150+808 drive solo and rhythm<p/>
 
 <a href="/images/myw3schoolsimage.jpg"DOWNLOAD ="w3logo">
-  <img src="/images/myw3schoolsimage.jpg" alt=" https://github.com/jepman777/am2Data.git " width="104" height="142">
+  <img src="/images/myw3schoolsimage.jpg" alt="Download" width="104" height="142">
 </a>
 
 <div class="column">
