--- a/2nd page.html
+++ b/2nd page.html
@@ -5,8 +5,8 @@
 
 </p>5150+808 drive solo and rhythm<p/>
 
-<a href="https://jepman777.github.io/JDL1/5150_808.am2Data"DOWNLOAD ="w3logo">
-  <img src="/images/myw3schoolsimage.jpg" alt="Down" width="104" height="142">
+<a href="https://jepman777.github.io/JDL1/5150_808.am2Data" DOWNLOAD ="w3logo">
+  <img src="https://jepman777.github.io/JDL1/5150_808.am2Data" alt="Down" width="104" height="142">
 </a>
 
 <div class="column">
