--- a/2nd page.html
+++ b/2nd page.html
@@ -4,7 +4,8 @@
 <h3 style="color:black;">HEAD AMPS + Drive</h3>
 
 </p>5150+808 drive solo and rhythm<p/>
-
+<p><a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a></p>p>
+    
 <p><a href="https://jepman777.github.io/JDL1/5150_808.am2Data" target="Download">Download</a></p>
 
 <div class="column">
