--- a/2nd page.html
+++ b/2nd page.html
@@ -6,7 +6,7 @@
 </p>5150+808 drive solo and rhythm<p/>
 
     
-<p><a href="https://jepman777.github.io/JDL1/5150_808.am2Data" "https://jepman777.github.io/g/g.jpg" target="Download">Download</a></p>
+<p><a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a></p>
 
 <div class="column">
     <img src="2.png" alt="5150_808" style="width:100%">
