--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 <body style="background-color:black;">
 
 <h1 style="color:Tomato;">JDLMUSIC</h1>
-📩 E-mail : jepmantattoo@gmail.com
+📩 <p style="color:white;"> E-mail : jepmantattoo@gmail.com</p>
 <p style="color:DodgerBlue;">Music expresses that which cannot be put into words and that which cannot remain silent.</p>
 
 <p style="color:MediumSeaGreen;"<!DOCTYPE html>
