--- a/1.html
+++ b/1.html
@@ -2,8 +2,8 @@
 <html>
 <body style="background-color:black;">
 
-<h1 style="color:Tomato;">JDLMUSIC</h1>
-<p style="color:white;"> E-mail : jepmantattoo@gmail.com</p>
+  <img src="jdl.png" alt="Blackbox" width="1000 height="300">
+
 <p style="color:DodgerBlue;">Music expresses that which cannot be put into words and that which cannot remain silent.</p>
 
 <p style="color:MediumSeaGreen;"<!DOCTYPE html>
