--- a/1.html
+++ b/1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:black;">
-
+<style>
+p {text-align: center;}
   <img src="jdl.png" alt="Blackbox" width="1000 height="300">
 
 <p style="color:DodgerBlue;">Music expresses that which cannot be put into words and that which cannot remain silent.</p>
