--- a/1.html
+++ b/1.html
@@ -3,6 +3,8 @@
 <body style="background-color:black;">
 <style>
 p {text-align: center;}
+  <!--Tab to edit-->
+</style>
   <img src="jdl.png" alt="Blackbox" width="1000 height="300">
 
 <p style="color:DodgerBlue;">Music expresses that which cannot be put into words and that which cannot remain silent.</p>
