--- a/2nd page.html
+++ b/2nd page.html
@@ -3,18 +3,24 @@
 <body style="background-color:greenyellow ;">
 <h3 style="color:black;">HEAD AMPS + Drive</h3>
 
-</p>5150+808 drive solo and rhythm<p/>
+5150+808 drive solo and rhythm
 
-    
-<p><a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a></p>
+  <div class="column">
+    <img src="2.png" alt="5150_808" style="width:80%">
+  </div>
+  
+<a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
 
 <div class="column">
-    <img src="2.png" alt="5150_808" style="width:100%">
-  </div>
+  <img src="dsp.png" alt="petucci" style="width:50%">
+</div>
 
+<a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
 
-
-
+<div class="column">
+  <img src="jcm2000.png" alt="marshall" style="width:50%">
+</div>
+<a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
 
   <!--Tab to edit-->
   
