--- a/2nd page.html
+++ b/2nd page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:greenyellow ;">
-<h3 style="color:black;">HEAD AMPS + Drive</h3>
+<h3 style="color:black;">Ann Profile m-vave</h3>
   
   <div class="column">
     <img src="2.png" alt="5150_808" style="width:80%">
