--- a/2nd page.html
+++ b/2nd page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<body style="background-color:greenyellow ;">
-  <h3 style="color:black;">Ann Profile m-vave</h3>
-
+<body style="background-color:black;">
+  <h3 style="color:white;">Ann Profile m-vave</h3>
+<right>
   <div class="column">
     <img src="2.png" alt="5150_808" style="width:80%">
   </div>
@@ -21,16 +21,23 @@
   </div>
   <a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
 
- <div class="column">
-   <img src="black5150.png" alt="marshall" style="width:50%">
- </div>
+  <div class="column">
+    <img src="black5150.png" alt="marshall" style="width:50%">
+  </div>
   <a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
 
- <div class="column">
-   <img src="ndspblack.png" alt="marshall" style="width:60%">
- </div>
+  <div class="column">
+    <img src="ndspblack.png" alt="marshall" style="width:60%">
+  </div>
   <a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
 
+<div class="column">
+<img src="deluxereverb-removebg-preview.png" alt="Fender65" style="width:50%">
+</div>
+
+  </div>
+  <a href="https://jepman777.github.io/g/g.jpg" target="Download">Download</a>
+</right>
   <!--Tab to edit-->
 
   </ /html>
